[project]
name = "mcp-started-guide"
version = "0.1.0"
description = "一个基于FastMCP的顺丰物流查询服务示例"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "CynicalHeart", email = "294366031@qq.com"}
]
dependencies = [
    "fastmcp>=2.5.1",
    "open-sdk-py>=2.1.1",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/CynicalHeart/mcp-started-guide"
Repository = "https://github.com/CynicalHeart/mcp-started-guide.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
